--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ PORT=3000
 # *** Database ***
 
 # - DEVELOPMENT:
-DATABASE_URL=postgres://postgres:anne66@localhost:5432/chroma_game
+DATABASE_URL=postgres://@localhost:5432/chrome_db
