refactored gameplay js a bit

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "drop-tables": "node data/drop-tables.js",
     "load-seed-data": "node data/load-seed-data.js",
     "recreate-tables": "npm run drop-tables && npm run create-tables",
-    "setup-db": "npm run recreate-tables && npm run load-seed-data"
+    "setup-db": "npm run recreate-tables && npm run load-seed-data",
+    "super-push": "git push && git push heroku dev:master"
   },
   "author": "Pat, Jose, Luke, Maeve",
   "license": "ISC",
